--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
 body{
 	background-color:purple;
 	font-size:160%;
-	background-color:green;
-	background-image:url("13131269_759101110893509_1700082204761160413_o.jpg");
+	background-color:blue;
 	
 }
 h1{
-	color:white;
+	color:black;
 }
 h2{
-	color:blue;
+	color:black;
 }
 p{
 	color:purple;
 }
 </style></head>
-<p style="font-size:160%;font-family:verdana;color:white"><b>
+<p style="font-size:60%;font-family:verdana;color:white"><b>
 REMEMBER THE GRACE OF GOD AS SOON AS YOU GET UP. YOU'VE OPENED YOUR EYES 
 WITH HIS GRACE PRAY THAT THIS GRACE CONTINUES THROUGH OUT THE DAY.<b>
 </p>
