--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <h1 style="color:red;font-size:220%";><b>SHRI KRISHAN KRIPA MANDIR AMBALA CITY</b></h1>
-<h2><pre> <b>HOME</b>    <b>ABOUT US</b>    <b>CONTACT US</b>  </pre></h2>
+<h2><pre> <b>Home</b>    <b>About Us</b>    <b>Contact Us</b>  </pre></h2>
 
 <head>
 <style>
 body{
 	background-color:purple;
 	font-size:160%;
-	background-color:blue;
+	background-color:white;
 	
 }
 h1{
@@ -22,16 +22,15 @@ p{
 }
 </style></head>
 <p style="font-size:60%;font-family:verdana;color:white"><b>
-REMEMBER THE GRACE OF GOD AS SOON AS YOU GET UP. YOU'VE OPENED YOUR EYES 
-WITH HIS GRACE PRAY THAT THIS GRACE CONTINUES THROUGH OUT THE DAY.<b>
+Shri Krishan Govind Hare Murari Hey Naath Narayan Vasudeva<b>
 </p>
 <h2 style="font-size:160%"><i><b>UPCOMING EVENTS</i></b></h2>
-<h1><marquee direction="right">Varshik Utsav Mahotsav on 5th May from 7pm onwards Maharaj ji ke sanidya me   </marquee></h2>
+<h1><marquee direction="right">JAI SHRI KRISHNA  </marquee></h2>
 <h2 style="font-size:200%;color:green"><b> <i>Mere naath aap apni kripa sada sab pr banaye rkhe</i></b> </h2>
 </body>
 <p style="font-size:180%;color:yellow";><pre><b>ADDRESS:
 Shri Krishan Kripa Mandir
-SECTOR -8 ,Ambala City 
+SECTOR-8 ,Ambala City 
 Pincode:134003
 Haryana,India<b></pre></p>
 
